--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,66 +6,22 @@
 
 .conteiner
 {
-    width:1000px;
-    height:650px;
+  max-width:900px;
     margin:auto;
-
+  
     background:yellow;
+    
+    
     margin-top:10px;
     position:relative;
 }
 
-.wrapper {
-	position:absolute;
-	width:800px;
-	height:600px; 
-
-	background:gray;  
+.item{
+  
+  background: aqua;
+  border: 1px solid red;
+  /* margin: 10px; */
 }
 
-/* --- ZONA - PRINCIPAL --- --- --- ---*/
-.wrapper .wrap1 {
-	position:absolute;
-	width:400px;
-    height:300px;
-     
 
-	background:purple;
-	 	  
-}
 
-.wrapper .wrap2 {
-	position:absolute;
-	width:400px;
-    height:300px;
-    left:400px; 
-
-	background:aqua;
-	 	  
-}
-.wrapper .wrap3 {
-	position:absolute;
-	width:400px;
-    height:300px;
-    top:300px; 
-
-	background:brown;
-	 	  
-}
-.wrapper .wrap4 {
-	position:absolute;
-	width:400px;
-    height:300px;
-    top:300px;
-	left:400px; 
-
-	background:orange;	  	  
-}
-
-.slider {
-	background-color:green;
-	position:absolute;
-	width:200px;
-	height:650px;
-	left:800px; 
-}
