--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,7 +18,7 @@ ol,ul { /*PASO 2: reseteamos los estilos de margin/pading */
 }
 figure{
   margin:0;
-  margin-left:50px;
+  /* margin-left:50px; */
 }
 
 .barra a{
