--- a/css/estilos.css
+++ b/css/estilos.css
@@ -80,5 +80,15 @@ figure{
 }
 .hero img {
  width: 100%;
+ height: 400px;
  margin-left: 0;
+ z-index: 1;
+ position: relative;
+}
+.hero .hero-title {
+  background-color: orange;
+  width: 400px;
+  height: 200px;
+  position: absolute;
+  z-index: 2;
 }
