--- a/css/estilos.css
+++ b/css/estilos.css
@@ -74,18 +74,29 @@ figure{
   height: 130px;
 }
 
-.item:nth-of-type(1) .post {
+.item:nth-of-type(1) .conten_post {
   width: 900px;
   height: 300px;
   background-color: aqua;
 }
 
-.item:nth-of-type(1) .post .post_img {
-  width: 469px;
+.item:nth-of-type(1) .conten_post .post {
+  width: 880px;
   height: 300px;
   background-color: red;
+  margin-left: 10px;
+  display: flex;
 }
-
+.post_img {
+  width: 50%;
+  height: 300px;
+  background-color: yellow;
+}
+.post_text {
+  width: 50%;
+  height: 300px;
+  background-color: green;
+}
 
 .y {
   background-color: orange;
@@ -112,4 +123,25 @@ figure{
   font-size: 50px;
   margin-left: 10px;
   color: #C3E2D2;
+}
+.quien{
+  width: 200px;
+  height: 100px;
+  background-color: aqua;
+  display: flex;
+}
+.q_img {
+  width: 50%;
+  height: 50px;
+  border-radius: 50%;
+}
+.text {
+  width: 50%;
+  height: 50px; 
+}
+.text h1 {
+  font-size: 10px; 
+}
+.text h2 {
+  font-size: 5px; 
 }
