--- a/css/estilos.css
+++ b/css/estilos.css
@@ -95,7 +95,7 @@ figure{
   margin-top: 20px;
   margin-left: 10px;
   display: flex;
-  border: 1px solid black;
+  border: 1px solid #C3E2D2;
 }
 .post_img {
   width: 50%;
