--- a/css/estilos.css
+++ b/css/estilos.css
@@ -185,3 +185,9 @@
     width:100%;
     height:100%;
   }
+  .foo {
+    margin-top: 100px;
+    width: 100%;
+    height: 50px;
+    background-color: blue;
+  }
