--- a/css/estilos.css
+++ b/css/estilos.css
@@ -188,6 +188,14 @@
   .foo {
     margin-top: 100px;
     width: 100%;
-    height: 50px;
+    height: 38px;
     background-color: blue;
+    position: relative;
+  }
+
+  .fooo {
+    position: absolute;
+    margin-top: 12px;
+    font-size: 14px;
+    margin-left: 429px;
   }
