--- a/css/estilos.css
+++ b/css/estilos.css
@@ -171,8 +171,9 @@
   }
   .title_1 {
     width: 400px;
+    font-family: 'Ubuntu Mono', monospace;
     font-weight: 500;
-    font-size: 34px;
+    font-size: 31px;
     margin-left: 30px;
     margin-top: 12px;
   }
@@ -186,16 +187,18 @@
     height:100%;
   }
   .foo {
+    font-family: 'Ubuntu Mono', monospace;
     margin-top: 100px;
     width: 100%;
     height: 38px;
-    background-color: blue;
+    color: white;
+    background-color: #003c80;
     position: relative;
   }
 
   .fooo {
     position: absolute;
     margin-top: 12px;
-    font-size: 14px;
+    font-size: 16px;
     margin-left: 429px;
   }
